# robotology-ros-common

./: README.md
robotology_controller/: CMakeLists.txt  README.md  package.xml  robotology_controller.cpp  service.cpp
robotology_controller/config/: cer_controllers.yaml  cer_moveit_controller.yaml  icub_controllers.yaml
robotology_controller/launch/: cer_controllers.launch  icub_controllers.launch  service.launch
robotology_msgs/: CMakeLists.txt  README.md  package.xml
robotology_msgs/srv/: controlBoardSrv.srv
